Fixed SEO of portfolio webisite

--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio-Aditya</title>
+    <title>Aditya Choudhary | Web Developer & C++ Programmer</title>
+    <!-- Favicon -->
+    <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="icon/favicon.ico">
 
     <meta name="description"
-        content="Aditya Choudhary's personal portfolio showcasing creative web development projects, games, and tools. Explore responsive websites, puzzles, to-do lists, and more built with HTML, CSS, JavaScript, and Bootstrap. Let's build something amazing together.">
+        content="Hi, I'm Aditya Choudhary – a Web Developer and C++ Programmer from Patna, Bihar. Explore my projects, coding skills, and web creations through my portfolio which showcases my creative web development projects, games, and tools. Explore responsive websites, puzzles, to-do lists, and more built with HTML, CSS, JavaScript, and Bootstrap. Let's build something amazing together.">
     <meta name="keywords"
-        content="Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
+        content="aditya choudhary,c++,html,css ,js web developer, C++ programmer, portfolio, front-end developer, backend, full-stack, software engineer, India developer, Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap,tailwind,react,mern,mongodb,expressjs, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
     <meta name="author" content="Aditya Choudhary">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://adiityachoudhary.github.io/portfolio/">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Aditya Choudhary | Web Developer & C++ Programmer">
+    <meta property="og:description"
+        content="Explore my portfolio of projects and technical skills in web development and programming.">
+    <meta property="og:image" content="https://github.com/adiityachoudhary/portfolio/blob/main/pic/preview.webp">
+    <meta property="og:url" content="https://adiityachoudhary.github.io/portfolio/">
+    <meta property="og:site_name" content="Aditya Choudhary Portfolio">
+    <meta property="og:type" content="website">
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aditya Choudhary | Web Developer & C++ Programmer">
+    <meta name="twitter:description" content="Explore my latest web development work and C++ projects.">
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -33,8 +49,6 @@
     <link href="bs/css/bootstrap.css" rel="stylesheet">
     <!-- navbar css -->
     <link rel="stylesheet" href="style.css">
-    <!-- favicon -->
-    <link rel="icon" href="icon/dp.ico">
 
     <style>
 
