Fixed SEO of portfolio webisite

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Choudhary | Web Developer & C++ Programmer</title>
     <!-- Favicon -->
-    <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="icon/favicon.ico">
+    <link rel="icon" href="icon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="icon/favicon.png">
 
     <meta name="description"
         content="Hi, I'm Aditya Choudhary – a Web Developer and C++ Programmer from Patna, Bihar. Explore my projects, coding skills, and web creations through my portfolio which showcases my creative web development projects, games, and tools. Explore responsive websites, puzzles, to-do lists, and more built with HTML, CSS, JavaScript, and Bootstrap. Let's build something amazing together.">
