embedded resume and added icons

--- a/index.html
+++ b/index.html
@@ -71,22 +71,25 @@
                 <div class="collapse navbar-collapse" id="navbarFancy">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html#home"><i class="fa-solid fa-home"></i> Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Resume.html">About</a>
+                            <a class="nav-link" href="Resume.html"><i class="fa-solid fa-address-card"></i> About</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="#projects">Projects</a>
+                            <a class="nav-link" href="#projects"><i class="fa-solid fa-list-check"></i> Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html"><i class="fa-solid fa-phone"></i> Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="src/Aditya Choudhary resume.pdf"
+                                 target="_blank"><i class="fa-regular fa-file-pdf"></i> Resume</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
 
         <!-- content -->
         <div class="container mt-3 ">
