--- a/Resume.html
+++ b/Resume.html
@@ -61,17 +61,22 @@
             <div class="collapse navbar-collapse" id="navbarFancy">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home"><i class="fa-solid fa-home"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about"><i class="fa-solid fa-address-card"></i> About</a>
                     </li>
                     <li class=" nav-item">
-                        <a class="nav-link" href="index.html#projects">Projects</a>
+                        <a class="nav-link" href="index.html#projects"><i class="fa-solid fa-list-check"></i> Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html"><i class="fa-solid fa-phone"></i> Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="src/Aditya Choudhary resume.pdf" target="_blank"><i
+                                class="fa-regular fa-file-pdf"></i> Resume</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -88,22 +93,22 @@
                     <!-- Photo -->
                     <div class="row my-4">
 
-                         <div class="col-4 col-md-5 col-lg-12  m-auto p-4 text-center text-light">
-                        <div>
-                            <img src="pic/Photosquare.jpg" alt="Display Picture"
-                                class="img-thumbnail rounded-circle  img-large border border-light hover-shadow-box-animation ">
+                        <div class="col-4 col-md-5 col-lg-12  m-auto p-4 text-center text-light">
+                            <div>
+                                <img src="pic/Photosquare.jpg" alt="Display Picture"
+                                    class="img-thumbnail rounded-circle  img-large border border-light hover-shadow-box-animation ">
+                            </div>
                         </div>
+
+                        <!-- Show Name on Mobile devices only -->
+                        <div class="col-8 col-md-7 m-auto d-md-block d-lg-none text-center">
+                            <h1 class="text-white fw-bold ">ADITYA CHOUDHARY</h1>
+                            <h4 class="text-secondary">WEB DEVELOPER</h4>
+
+                        </div>
+
                     </div>
 
-                    <!-- Show Name on Mobile devices only -->
-                    <div class="col-8 col-md-7 m-auto d-md-block d-lg-none text-center">
-                        <h1 class="text-white fw-bold ">ADITYA CHOUDHARY</h1>
-                        <h4 class="text-secondary">WEB DEVELOPER</h4>
-                        
-                    </div>
-
-                    </div>
-                   
                     <!--Contact-->
                     <div class="row text-white pb-5" id="contact">
                         <div>
