--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
         #home {
             background-image: url(pic/dark1.jpg) !important;
         }
-        .nav-link{
+
+        .nav-link {
             color: white !important;
         }
-
     </style>
 </head>
 
@@ -51,17 +51,22 @@
                 <div class="collapse navbar-collapse" id="navbarFancy">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html#home"><i class="fa-solid fa-home"></i> Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Resume.html">About</a>
+                            <a class="nav-link" href="Resume.html"><i class="fa-solid fa-address-card"></i> About</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="index.html#projects">Projects</a>
+                            <a class="nav-link" href="index.html#projects"><i class="fa-solid fa-list-check"></i> Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html#home">Contact</a>
+                            <a class="nav-link" href="contact.html#home"><i class="fa-solid fa-phone"></i> Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="src/Aditya Choudhary resume.pdf" target="_blank"><i
+                                    class="fa-regular fa-file-pdf"></i> Resume</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -72,43 +77,47 @@
         <div class="container mt-3">
             <!-- paragraph briefing -->
             <div class="acrylic hero-box mx-auto ">
-                    <h1 class="mb-3 text-info fw-bold">Get in Touch</h1>
-                    <h3><strong>Aditya Choudhary</strong></h3>
-                    <p>Web Developer | C++ Programmer</p>
-                    <p><strong>Education:</strong> Master of Computer Applications (MCA)</p>
-                    <p><strong>Expertise:</strong> Frontend Development, C++, UI/UX Design</p>
-                    <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, Tailwind, PHP, Git, GitHub</p>
-                    <p><strong>Programming:</strong> C++, Python, SQL, Data Structures & Algorithms</p>
-                    <p><strong>Hobbies:</strong> Building responsive Interfaces, Solving Logical Problems, Exploring New Tech</p>
-                    <p><strong>Availability:</strong> Open to internships, collaborations, freelance work</p>
-                    <p><strong>📞 Phone:</strong> <a href="tel:+917543030142">+91 7543030142</a></p>
-                    <p><strong>✉️ Email:</strong> <a href="mailto:caditya965@gmail.com">caditya965@gmail.com</a></p>
+                <h1 class="mb-3 text-info fw-bold">Get in Touch</h1>
+                <h3><strong>Aditya Choudhary</strong></h3>
+                <p>Web Developer | C++ Programmer</p>
+                <p><strong>Education:</strong> Master of Computer Applications (MCA)</p>
+                <p><strong>Expertise:</strong> Frontend Development, C++, UI/UX Design</p>
+                <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, Tailwind, PHP, Git, GitHub</p>
+                <p><strong>Programming:</strong> C++, Python, SQL, Data Structures & Algorithms</p>
+                <p><strong>Hobbies:</strong> Building responsive Interfaces, Solving Logical Problems, Exploring New
+                    Tech</p>
+                <p><strong>Availability:</strong> Open to internships, collaborations, freelance work</p>
+                <p><strong>📞 Phone:</strong> <a href="tel:+917543030142">+91 7543030142</a></p>
+                <p><strong>✉️ Email:</strong> <a href="mailto:caditya965@gmail.com">caditya965@gmail.com</a></p>
 
-                    <div class="contact-links mt-4">
+                <div class="contact-links mt-4">
 
-                         <a href="https://wa.me/+917543030142?text=Hi%20Aditya%2C%20I%20saw%20your%20profile%20and%20wanted%20to%20connect." target="_blank" class="text-decoration-none">
-                            <img src="https://img.shields.io/badge/-whatsapp-green?style=for-the-badge&logo=whatsapp&logoColor=white"
-                                alt="Whatsapp" class="pt-1">
-                        </a>
-                        <a href="mailto:caditya965@gmail.com" target="_blank" class="text-decoration-none">
-                            <img src="https://img.shields.io/badge/-Email-red?style=for-the-badge&logo=gmail&logoColor=white"
-                                alt="Email" class="pt-1">
-                        </a>
+                    <a href="https://wa.me/+917543030142?text=Hi%20Aditya%2C%20I%20saw%20your%20profile%20and%20wanted%20to%20connect."
+                        target="_blank" class="text-decoration-none">
+                        <img src="https://img.shields.io/badge/-whatsapp-green?style=for-the-badge&logo=whatsapp&logoColor=white"
+                            alt="Whatsapp" class="pt-1">
+                    </a>
+                    <a href="mailto:caditya965@gmail.com" target="_blank" class="text-decoration-none">
+                        <img src="https://img.shields.io/badge/-Email-red?style=for-the-badge&logo=gmail&logoColor=white"
+                            alt="Email" class="pt-1">
+                    </a>
 
-                        <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank" class="text-decoration-none">
-                            <img src="https://img.shields.io/badge/-LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white"
-                                alt="LinkedIn" class="pt-1">
-                        </a>
-                        <a href="https://github.com/adiityachoudhary" target="_blank" class="text-decoration-none">
-                            <img src="https://img.shields.io/badge/-GitHub-black?style=for-the-badge&logo=github&logoColor=white"
-                                alt="GitHub" class="pt-1">
-                        </a>
-                        <a href="https://adiityachoudhary.github.io/portfolio/" target="_blank" class="text-decoration-none">
-                            <img src="https://img.shields.io/badge/-Portfolio-orange?style=for-the-badge&logo=react&logoColor=white"
-                                alt="Portfolio" class="pt-1">
-                        </a>
-                    </div>
-               
+                    <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                        class="text-decoration-none">
+                        <img src="https://img.shields.io/badge/-LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white"
+                            alt="LinkedIn" class="pt-1">
+                    </a>
+                    <a href="https://github.com/adiityachoudhary" target="_blank" class="text-decoration-none">
+                        <img src="https://img.shields.io/badge/-GitHub-black?style=for-the-badge&logo=github&logoColor=white"
+                            alt="GitHub" class="pt-1">
+                    </a>
+                    <a href="https://adiityachoudhary.github.io/portfolio/" target="_blank"
+                        class="text-decoration-none">
+                        <img src="https://img.shields.io/badge/-Portfolio-orange?style=for-the-badge&logo=react&logoColor=white"
+                            alt="Portfolio" class="pt-1">
+                    </a>
+                </div>
+
 
             </div>
         </div>
