Added topbar in each page of website

--- a/Resume.html
+++ b/Resume.html
@@ -32,7 +32,7 @@
 
         /* background color */
         body {
-            background-color: #9d9d9d
+            background-color: #ffffff
         }
 
         .img-thumbnail {
@@ -46,10 +46,49 @@
                 height: auto;
             }
         }
+        .information{
+            background-color:rgb(255, 255, 240);
+        }
     </style>
 </head>
 
 <body id="about">
+     <div class="bg-black text-white">
+            <div class="container p-2 d-flex">
+                <div class="col-lg-8 col-6 justify-content-start  ">
+
+                    <!-- GitHub -->
+                    <a class="text-white p-2" href="https://github.com/adiityachoudhary" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  text-white fa-github  me-2"></i></a>
+
+                    <!-- Linkedin -->
+                    <a class="text-white p-2" href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-white me-2"></i></a>
+
+
+                    <!-- twitter -->
+                    <a class="text-white p-2" href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35"
+                        target="_blank" style="text-decoration: none;"><i
+                            class=" fa-brands  fa-twitter text-white me-2"></i></a>
+                </div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
+                        class="text-decoration-none text-white toptext"><i class="fa fa-phone" aria-hidden="true"></i>
+                        +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
+                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope" aria-hidden="true"></i>
+                        caditya965@gmail.com</a></div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-6 d-block d-md-none d-flex justify-content-end ">
+                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i class="fa fa-phone px-2"
+                            aria-hidden="true"></i> |
+                        <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-white"><i
+                                class="fa fa-envelope px-2" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+        </div>
     <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
         <div class="container">
             <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px"></a>
@@ -88,7 +127,7 @@
             <div class="row">
 
                 <!-- GREY column -->
-                <div class="col-lg-3" style="background-color: #282828;">
+                <div class="col-lg-3" style="background-color: #1f1f1f;">
 
                     <!-- Photo -->
                     <div class="row my-4">
@@ -268,7 +307,7 @@
                 </div>
 
                 <!-- WHITE column -->
-                <div class="col-lg-9 py-5 px-5 border bg-white">
+                <div class="col-lg-9 py-5 px-5 border information">
                     <h1 class="fw-bold">ADITYA CHOUDHARY</h1>
                     <h4 class="text-muted">WEB DEVELOPER</h4>
 
