--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,42 @@
 <body>
     <!-- Main container -->
     <div id="home" class="container-fluid gx-0">
+         <div class="bg-white text-white">
+            <div class="container p-2 d-flex">
+                <div class="col-lg-8 col-6 justify-content-start  ">
+
+                    <!-- GitHub -->
+                    <a class="text-black p-2" href="https://github.com/adiityachoudhary" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  text-black fa-github  me-2"></i></a>
+
+                    <!-- Linkedin -->
+                    <a class="text-black p-2" href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-black me-2"></i></a>
+
+
+                    <!-- twitter -->
+                    <a class="text-black p-2" href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35"
+                        target="_blank" style="text-decoration: none;"><i
+                            class=" fa-brands  fa-twitter text-black me-2"></i></a>
+                </div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
+                        class="text-decoration-none text-black toptext"><i class="fa fa-phone " aria-hidden="true"></i>
+                        +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
+                        class="text-decoration-none text-black toptext">&nbsp<i class="fa fa-envelope " aria-hidden="true"></i>
+                        caditya965@gmail.com</a></div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-6 d-block d-md-none d-flex justify-content-end ">
+                    <a href="tel:+917543030142" class="text-decoration-none text-black"><i class="fa fa-phone px-2"
+                            aria-hidden="true"></i> |
+                        <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-black"><i
+                                class="fa fa-envelope px-2" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+        </div>
         <!-- Navbar -->
         <!-- Fancy Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
@@ -79,7 +115,7 @@
             <div class="acrylic hero-box mx-auto ">
                 <h1 class="mb-3 text-info fw-bold">Get in Touch</h1>
                 <h3><strong>Aditya Choudhary</strong></h3>
-                <p>Web Developer | C++ Programmer</p>
+                <p class="fw-bold">Web Developer | C++ Programmer</p>
                 <p><strong>Education:</strong> Master of Computer Applications (MCA)</p>
                 <p><strong>Expertise:</strong> Frontend Development, C++, UI/UX Design</p>
                 <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, Tailwind, PHP, Git, GitHub</p>
@@ -87,7 +123,7 @@
                 <p><strong>Hobbies:</strong> Building responsive Interfaces, Solving Logical Problems, Exploring New
                     Tech</p>
                 <p><strong>Availability:</strong> Open to internships, collaborations, freelance work</p>
-                <p><strong>📞 Phone:</strong> <a href="tel:+917543030142">+91 7543030142</a></p>
+                <p><strong>📞 Phone:</strong> <a href="tel:+917543030142">+917543030142</a></p>
                 <p><strong>✉️ Email:</strong> <a href="mailto:caditya965@gmail.com">caditya965@gmail.com</a></p>
 
                 <div class="contact-links mt-4">
