--- a/index.html
+++ b/index.html
@@ -51,15 +51,51 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-
+        
     </style>
 </head>
 
 <body>
     <!-- Main container -->
-    <div id="home" class="container-fluid gx-0">
+    <div id="home" class="container-fluid gx-0 ">
+        <div class="bg-black text-white">
+            <div class="container p-2 d-flex">
+                <div class="col-lg-8 col-6 justify-content-start  ">
+
+                    <!-- GitHub -->
+                    <a class="text-white p-2" href="https://github.com/adiityachoudhary" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  text-white fa-github  me-2"></i></a>
+
+                    <!-- Linkedin -->
+                    <a class="text-white p-2" href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-white me-2"></i></a>
+
+
+                    <!-- twitter -->
+                    <a class="text-white p-2" href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35"
+                        target="_blank" style="text-decoration: none;"><i
+                            class=" fa-brands  fa-twitter text-white me-2"></i></a>
+                </div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
+                        class="text-decoration-none text-white toptext"><i class="fa fa-phone" aria-hidden="true"></i>
+                        +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
+                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope" aria-hidden="true"></i>
+                        caditya965@gmail.com</a></div>
+
+                <!-- only view on mobile screen -->
+                <div class="col-6 d-block d-md-none d-flex justify-content-end ">
+                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i class="fa fa-phone px-2"
+                            aria-hidden="true"></i> |
+                        <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-white"><i
+                                class="fa fa-envelope px-2" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+        </div>
+
         <!-- Navbar -->
-        <!-- Fancy Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
                 <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px"></a>
@@ -71,7 +107,8 @@
                 <div class="collapse navbar-collapse" id="navbarFancy">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html#home"><i class="fa-solid fa-home"></i> Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html#home"><i
+                                    class="fa-solid fa-home"></i> Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Resume.html"><i class="fa-solid fa-address-card"></i> About</a>
@@ -83,8 +120,8 @@
                             <a class="nav-link" href="contact.html"><i class="fa-solid fa-phone"></i> Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="src/Aditya Choudhary resume.pdf"
-                                 target="_blank"><i class="fa-regular fa-file-pdf"></i> Resume</a>
+                            <a class="nav-link" href="src/Aditya Choudhary resume.pdf" target="_blank"><i
+                                    class="fa-regular fa-file-pdf"></i> Resume</a>
                         </li>
                     </ul>
                 </div>
