Added alt name to image files and fixed OG Image preview in meta tags

--- a/Resume.html
+++ b/Resume.html
@@ -134,7 +134,7 @@
 
                         <div class="col-4 col-md-5 col-lg-12  m-auto p-4 text-center text-light">
                             <div>
-                                <img src="pic/Photosquare.jpg" alt="Display Picture"
+                                <img src="pic/Photosquare.jpg" alt="aditya choudhary display picture"
                                     class="img-thumbnail rounded-circle  img-large border border-light hover-shadow-box-animation ">
                             </div>
                         </div>
@@ -484,8 +484,8 @@
 
 
             <!-- Photo footer circle -->
-            <div class="col-lg-3 col-12 pt-2"><a href="#about" class="btn btn-primary active" role="button"
-                    aria-pressed="true">Scroll up</a></div>
+            <div class="col-lg-3 col-12 pt-2 "><a href="#about" role="button"
+                    aria-pressed="true"><i class="fa-duotone fa-solid fa-circle-chevron-up fs-4 text-white"></i></a></div>
         </ul>
 
     </footer>
