--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Aditya Choudhary | Web Developer & C++ Programmer">
     <meta property="og:description"
         content="Explore my portfolio of projects and technical skills in web development and programming.">
-    <meta property="og:image" content="https://github.com/adiityachoudhary/portfolio/blob/main/pic/preview.webp">
+    <meta property="og:image" content="https://raw.githubusercontent.com/adiityachoudhary/portfolio/refs/heads/main/pic/preview.webp">
     <meta property="og:url" content="https://adiityachoudhary.github.io/portfolio/">
     <meta property="og:site_name" content="Aditya Choudhary Portfolio">
     <meta property="og:type" content="website">
@@ -98,7 +98,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
-                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px"></a>
+                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="aditya_logo" height="40px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                     aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -158,7 +158,7 @@
                     <div class="col order-first">
                         <div class="card h-100">
                             <a href="Resume.html" class="text-decoration-none"><img src="pic/resume.png"
-                                    class="card-img-top p-1" alt="pic_resume">
+                                    class="card-img-top p-1" alt="aditya choudhary resume preview">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">ABOUT ME</h5>
                                     <p class="card-text text-muted">My resume built with HTML, CSS, and Bootstrap.
@@ -176,7 +176,7 @@
                         <div class="card h-100">
                             <a href="https://adiityachoudhary.github.io/Ecommerce_Website/" target="_blank"
                                 class="text-decoration-none"><img src="pic/ecomm.jpeg" class="card-img-top p-1"
-                                    alt="pic_resume">
+                                    alt="hydromate webiste preview">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">E-Commerce Website</h5>
                                     <p class="card-text text-muted">Modern e-commerce website which features smooth
@@ -193,7 +193,7 @@
                     <div class="col order-1">
                         <div class="card h-100">
                             <a href="puzzle/puzzle.html" target="_blank" class="text-decoration-none"><img
-                                    src="puzzle/puzzle.jpg" class="card-img-top p-1" alt="pic_resume">
+                                    src="puzzle/puzzle.jpg" class="card-img-top p-1" alt="Jigsaw Puzzle preview">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">Jigsaw Puzzle</h5>
                                     <p class="card-text text-muted"> Fun & Challenging Jigsaw Puzzle
@@ -209,7 +209,7 @@
                     <div class="col order-2">
                         <div class="card h-100">
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
-                                <img src="pic/pacman.png" class="card-img-top p-1" alt="pic_ludo">
+                                <img src="pic/pacman.png" class="card-img-top p-1" alt="pic pacman preview">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">PACMAN</h5>
                                     <p class="card-text text-muted">Digital recreation of the classic PACMAN game
@@ -225,7 +225,7 @@
                     <div class="col order-last">
                         <div class="card h-100">
                             <a href="chess.html" target="_blank" class="text-decoration-none"><img src="pic/chess.png"
-                                    class="card-img-top p-1" alt="pic_chessboard">
+                                    class="card-img-top p-1" alt="preview chessboard">
                                 <div class="card-body text-dark">
                                     <h5 class="card-title">CHESSBOARD</h5>
                                     <p class="card-text text-muted">Digital chessboard implementation using HTML, CSS,
@@ -243,7 +243,7 @@
                     <div class="col order-3">
                         <div class="card h-100">
                             <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img
-                                    src="word_counter/word_counter.jpg" class="card-img-top p-1" alt="pic_chessboard">
+                                    src="word_counter/word_counter.jpg" class="card-img-top p-1" alt="word counter preview">
                                 <div class="card-body text-dark">
                                     <h5 class="card-title">WORD COUNTER</h5>
                                     <p class="card-text text-muted">A simple and efficient tool to count words, letters,
@@ -260,7 +260,7 @@
                     <div class="col order-4">
                         <div class="card h-100">
                             <a href="todo/index.html" target="_blank" class="text-decoration-none"><img
-                                    src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do thumb">
+                                    src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do list preview">
                                 <div class="card-body text-dark">
                                     <h5 class="card-title ">TO-DO LIST</h5>
                                     <p class="card-text text-muted">A basic to-do list.
