added data analytics card and also added emojis to cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description"
         content="Hi, I'm Aditya Choudhary – a Web Developer and C++ Programmer from Patna, Bihar. Explore my projects, coding skills, and web creations through my portfolio which showcases my creative web development projects, games, and tools. Explore responsive websites, puzzles, to-do lists, and more built with HTML, CSS, JavaScript, and Bootstrap. Let's build something amazing together.">
     <meta name="keywords"
-        content="aditya choudhary,c++,html,css ,js web developer, C++ programmer, portfolio, front-end developer, backend, full-stack, software engineer, India developer, Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap,tailwind,react,mern,mongodb,expressjs, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
+        content="aditya choudhary, portfolio, aditya choudhary portfolio, c++,html,css ,js web developer, C++ programmer, portfolio, front-end developer, backend, full-stack, software engineer, India developer, Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap,tailwind,react,mern,mongodb,expressjs, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
     <meta name="author" content="Aditya Choudhary">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://adiityachoudhary.github.io/portfolio/">
@@ -23,7 +23,8 @@
     <meta property="og:title" content="Aditya Choudhary | Web Developer & C++ Programmer">
     <meta property="og:description"
         content="Explore my portfolio of projects and technical skills in web development and programming.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/adiityachoudhary/portfolio/refs/heads/main/pic/preview.webp">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/adiityachoudhary/portfolio/refs/heads/main/pic/preview.webp">
     <meta property="og:url" content="https://adiityachoudhary.github.io/portfolio/">
     <meta property="og:site_name" content="Aditya Choudhary Portfolio">
     <meta property="og:type" content="website">
@@ -51,7 +52,7 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-        
+
     </style>
 </head>
 
@@ -81,7 +82,8 @@
                 <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
                         class="text-decoration-none text-white toptext"><i class="fa fa-phone" aria-hidden="true"></i>
                         +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
-                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope" aria-hidden="true"></i>
+                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope"
+                            aria-hidden="true"></i>
                         caditya965@gmail.com</a></div>
 
                 <!-- only view on mobile screen -->
@@ -98,7 +100,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
-                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="aditya_logo" height="40px"></a>
+                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="aditya_logo"
+                        height="40px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                     aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -160,7 +163,7 @@
                             <a href="Resume.html" class="text-decoration-none"><img src="pic/resume.png"
                                     class="card-img-top p-1" alt="aditya choudhary resume preview">
                                 <div class="card-body  text-dark">
-                                    <h5 class="card-title">ABOUT ME</h5>
+                                    <h5 class="card-title">💼 About Me</h5>
                                     <p class="card-text text-muted">My resume built with HTML, CSS, and Bootstrap.
                                         Includes sections for personal info, education, work experience, skills,
                                         projects,
@@ -171,14 +174,33 @@
                         </div>
                     </div>
 
-                    <!-- Ecommerce Water app card-2 -->
+                    <!-- data analytics card-2 -->
                     <div class="col order-0">
+                        <div class="card h-100">
+                            <a href="https://github.com/adiityachoudhary/data_analytics" target="_blank"
+                                class="text-decoration-none"><img src="pic/dataa.webp" class="card-img-top p-1"
+                                    alt="data analytics preview">
+                                <div class="card-body  text-dark">
+                                    <h5 class="card-title">📊 Interactive Dashboards</h5>
+                                    <p class="card-text text-muted">
+                                        Explore my data analytics projects built with Tableau and Power BI. From sales
+                                        trends to customer insights, each dashboard turns raw data into clear, visual
+                                        stories that drive smart decisions.
+                                    </p>
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <!-- Ecommerce Water app card-2 -->
+                    <div class="col order-1">
                         <div class="card h-100">
                             <a href="https://adiityachoudhary.github.io/Ecommerce_Website/" target="_blank"
                                 class="text-decoration-none"><img src="pic/ecomm.jpeg" class="card-img-top p-1"
                                     alt="hydromate webiste preview">
                                 <div class="card-body  text-dark">
-                                    <h5 class="card-title">E-Commerce Website</h5>
+                                    <h5 class="card-title">💧E-Commerce Website</h5>
                                     <p class="card-text text-muted">Modern e-commerce website which features smooth
                                         navigation, add-to-cart functionality, quantity
                                         management, and a consistent layout.
@@ -190,12 +212,12 @@
                     </div>
 
                     <!-- Puzzle game card-3 -->
-                    <div class="col order-1">
+                    <div class="col order-2">
                         <div class="card h-100">
                             <a href="puzzle/puzzle.html" target="_blank" class="text-decoration-none"><img
                                     src="puzzle/puzzle.jpg" class="card-img-top p-1" alt="Jigsaw Puzzle preview">
                                 <div class="card-body  text-dark">
-                                    <h5 class="card-title">Jigsaw Puzzle</h5>
+                                    <h5 class="card-title">🧩 Jigsaw Puzzle</h5>
                                     <p class="card-text text-muted"> Fun & Challenging Jigsaw Puzzle
                                         Relax, unwind, and sharpen your mind with this high-quality puzzle.</p>
                                 </div>
@@ -206,12 +228,12 @@
 
 
                     <!-- Pacman card card-4 -->
-                    <div class="col order-2">
+                    <div class="col order-3">
                         <div class="card h-100">
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
                                 <img src="pic/pacman.png" class="card-img-top p-1" alt="pic pacman preview">
                                 <div class="card-body  text-dark">
-                                    <h5 class="card-title">PACMAN</h5>
+                                    <h5 class="card-title">👾 PACMAN</h5>
                                     <p class="card-text text-muted">Digital recreation of the classic PACMAN game
                                         using HTML,
                                         CSS,
@@ -227,7 +249,7 @@
                             <a href="chess.html" target="_blank" class="text-decoration-none"><img src="pic/chess.png"
                                     class="card-img-top p-1" alt="preview chessboard">
                                 <div class="card-body text-dark">
-                                    <h5 class="card-title">CHESSBOARD</h5>
+                                    <h5 class="card-title">♟️ Chessboard</h5>
                                     <p class="card-text text-muted">Digital chessboard implementation using HTML, CSS,
                                         and
                                         Bootstrap.
@@ -240,12 +262,13 @@
                     </div>
 
                     <!-- word counter card-5 -->
-                    <div class="col order-3">
+                    <div class="col order-4">
                         <div class="card h-100">
                             <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img
-                                    src="word_counter/word_counter.jpg" class="card-img-top p-1" alt="word counter preview">
+                                    src="word_counter/word_counter.jpg" class="card-img-top p-1"
+                                    alt="word counter preview">
                                 <div class="card-body text-dark">
-                                    <h5 class="card-title">WORD COUNTER</h5>
+                                    <h5 class="card-title">✍️ Word Counter</h5>
                                     <p class="card-text text-muted">A simple and efficient tool to count words, letters,
                                         and spaces in real-time. Built to boost productivity and track content length
                                         instantly.
@@ -257,12 +280,12 @@
                     </div>
 
                     <!-- TO-DO card card-3 -->
-                    <div class="col order-4">
+                    <div class="col order-5">
                         <div class="card h-100">
                             <a href="todo/index.html" target="_blank" class="text-decoration-none"><img
                                     src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do list preview">
                                 <div class="card-body text-dark">
-                                    <h5 class="card-title ">TO-DO LIST</h5>
+                                    <h5 class="card-title ">✅ To-Do List</h5>
                                     <p class="card-text text-muted">A basic to-do list.
                                         Add, manage, and complete tasks with
                                         ease. Stay organized and get things done.</p>
@@ -309,7 +332,7 @@
 
                 <!-- Photo footer circle -->
                 <div class="col-lg-3 col-12 pt-2"><a href="index.html#home"><img src="pic/Photosquare.jpg"
-                            alt="Display picture" class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
+                            alt="aditya choudhary portfolio display picture" class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
             </ul>
 
             <!-- Visitor Counter -->
