--- a/Resume.html
+++ b/Resume.html
@@ -134,7 +134,7 @@
 
                         <div class="col-4 col-md-5 col-lg-12  m-auto p-4 text-center text-light">
                             <div>
-                                <img src="pic/Photosquare.jpg" alt="aditya choudhary display picture"
+                                <img src="pic/Photosquare.jpg" alt="aditya choudhary portfolio display picture"
                                     class="img-thumbnail rounded-circle  img-large border border-light hover-shadow-box-animation ">
                             </div>
                         </div>
