Added hover effect in topbar and cards

--- a/index.html
+++ b/index.html
@@ -59,39 +59,39 @@
 <body>
     <!-- Main container -->
     <div id="home" class="container-fluid gx-0 ">
-        <div class="bg-black text-white">
+        <div class="bg-black text-white ">
             <div class="container p-2 d-flex">
                 <div class="col-lg-8 col-6 justify-content-start  ">
 
                     <!-- GitHub -->
                     <a class="text-white p-2" href="https://github.com/adiityachoudhary" target="_blank"
-                        style="text-decoration: none;"><i class=" fa-brands  text-white fa-github  me-2"></i></a>
+                        style="text-decoration: none;"><i class=" fa-brands  text-white fa-github  me-2 top-bar"></i></a>
 
                     <!-- Linkedin -->
                     <a class="text-white p-2" href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
-                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-white me-2"></i></a>
+                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-white me-2 top-bar"></i></a>
 
 
                     <!-- twitter -->
                     <a class="text-white p-2" href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35"
                         target="_blank" style="text-decoration: none;"><i
-                            class=" fa-brands  fa-twitter text-white me-2"></i></a>
+                            class=" fa-brands  fa-twitter text-white me-2 top-bar"></i></a>
                 </div>
 
-                <!-- only view on mobile screen -->
+                <!-- only view on lg screen -->
                 <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
-                        class="text-decoration-none text-white toptext"><i class="fa fa-phone" aria-hidden="true"></i>
+                        class="text-decoration-none text-white toptext "><i class="fa fa-phone top-bar" aria-hidden="true"></i>
                         +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
-                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope"
+                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope top-bar"
                             aria-hidden="true"></i>
                         caditya965@gmail.com</a></div>
 
                 <!-- only view on mobile screen -->
                 <div class="col-6 d-block d-md-none d-flex justify-content-end ">
-                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i class="fa fa-phone px-2"
+                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i class="fa fa-phone px-2 top-bar"
                             aria-hidden="true"></i> |
                         <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-white"><i
-                                class="fa fa-envelope px-2" aria-hidden="true"></i></a>
+                                class="fa fa-envelope px-2 top-bar" aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -154,11 +154,11 @@
                 <!-- Discover Our Work text-->
                 <div class="col-12 display-3 text-center pt-3 discover">Discover my Work</div>
 
-                <!-- four card -->
+                <!-- bunch of cards -->
                 <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4 p-1 ">
 
                     <!-- Resume card card-1 -->
-                    <div class="col order-first">
+                    <div class="col order-first ">
                         <div class="card h-100">
                             <a href="Resume.html" class="text-decoration-none"><img src="pic/resume.png"
                                     class="card-img-top p-1" alt="aditya choudhary resume preview">
