--- a/index.html
+++ b/index.html
@@ -59,17 +59,19 @@
 <body>
     <!-- Main container -->
     <div id="home" class="container-fluid gx-0 ">
-        <div class="bg-black text-white ">
+        <div class="bg-black text-white topinfobar">
             <div class="container p-2 d-flex">
-                <div class="col-lg-8 col-6 justify-content-start  ">
+                <div class="col-lg-7 col-6 justify-content-start  ">
 
                     <!-- GitHub -->
                     <a class="text-white p-2" href="https://github.com/adiityachoudhary" target="_blank"
-                        style="text-decoration: none;"><i class=" fa-brands  text-white fa-github  me-2 top-bar"></i></a>
+                        style="text-decoration: none;"><i
+                            class=" fa-brands  text-white fa-github  me-2 top-bar"></i></a>
 
                     <!-- Linkedin -->
                     <a class="text-white p-2" href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
-                        style="text-decoration: none;"><i class=" fa-brands  fa-linkedin text-white me-2 top-bar"></i></a>
+                        style="text-decoration: none;"><i
+                            class=" fa-brands  fa-linkedin text-white me-2 top-bar"></i></a>
 
 
                     <!-- twitter -->
@@ -79,19 +81,20 @@
                 </div>
 
                 <!-- only view on lg screen -->
-                <div class="col-lg-4 d-none d-lg-block d-flex justify-content-end "><a href="tel:+917543030142"
-                        class="text-decoration-none text-white toptext "><i class="fa fa-phone top-bar" aria-hidden="true"></i>
-                        +917543030142</a> &nbsp|&nbsp<a href="mailto:caditya965@gmail.com"
-                        class="text-decoration-none text-white toptext">&nbsp<i class="fa fa-envelope top-bar"
+                <div class="col-lg-5  d-none d-md-flex justify-content-end ms-auto pe-3"><a href="tel:+917543030142"
+                        class="text-decoration-none text-white toptext me-2"><i class="fa fa-phone top-bar"
+                            aria-hidden="true"></i>
+                        +917543030142</a>|<a href="mailto:caditya965@gmail.com"
+                        class="text-decoration-none text-white toptext ms-2"><i class="fa fa-envelope top-bar"
                             aria-hidden="true"></i>
                         caditya965@gmail.com</a></div>
 
                 <!-- only view on mobile screen -->
                 <div class="col-6 d-block d-md-none d-flex justify-content-end ">
-                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i class="fa fa-phone px-2 top-bar"
-                            aria-hidden="true"></i> |
-                        <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-white"><i
-                                class="fa fa-envelope px-2 top-bar" aria-hidden="true"></i></a>
+                    <a href="tel:+917543030142" class="text-decoration-none text-white"><i
+                            class="fa fa-phone px-2 top-bar" aria-hidden="true"></i></a> |
+                    <a href="mailto:caditya965@gmail.com" class="text-decoration-none text-white"><i
+                            class="fa fa-envelope px-2 top-bar" aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -110,20 +113,21 @@
                 <div class="collapse navbar-collapse" id="navbarFancy">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html#home"><i
+                            <a class="nav-link active btn" aria-current="page" href="index.html#home"><i
                                     class="fa-solid fa-home"></i> Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Resume.html"><i class="fa-solid fa-address-card"></i> About</a>
+                            <a class="nav-link btn" href="Resume.html"><i class="fa-solid fa-address-card"></i>
+                                About</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="#projects"><i class="fa-solid fa-list-check"></i> Projects</a>
+                            <a class="nav-link btn" href="#projects"><i class="fa-solid fa-list-check"></i> Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html"><i class="fa-solid fa-phone"></i> Contact</a>
+                            <a class="nav-link btn" href="contact.html"><i class="fa-solid fa-phone"></i> Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="src/Aditya Choudhary resume.pdf" target="_blank"><i
+                            <a class="nav-link btn" href="src/Aditya Choudhary resume.pdf" target="_blank"><i
                                     class="fa-regular fa-file-pdf"></i> Resume</a>
                         </li>
                     </ul>
@@ -332,7 +336,8 @@
 
                 <!-- Photo footer circle -->
                 <div class="col-lg-3 col-12 pt-2"><a href="index.html#home"><img src="pic/Photosquare.jpg"
-                            alt="aditya choudhary portfolio display picture" class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
+                            alt="aditya choudhary portfolio display picture"
+                            class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
             </ul>
 
             <!-- Visitor Counter -->
